fixed the banner misalignment on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ body {
 .hero-banner-img {
   position: absolute;
   right: 0;
-  top: -20rem;
+  top: -12rem;
   margin-top: 0;
 }
 
